--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
         <div class="www">
             <img src="img/instagram.png" alt="" />
             <div class="d">
-                <input type="text" placeholder="Phone number, username, or email" class="inttp" />
+                <input type="text" placeholder="Phone number, username, or email" class="inp" />
             </div>
             <div class="a">
-                <input type="password" placeholder="Password" class="inptt" />
+                <input type="password" placeholder="Password" class="inpt" />
             </div>
             <div class="s">
                 <button class="tn">Log in</button>
