--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
         <div class="www">
             <img src="img/instagram.png" alt="" />
             <div class="d">
-                <input type="text" placeholder="Phone number, username, or email" class="inp" />
+                <input type="text" placeholder="Phone number, username, or email" class="inpp" />
             </div>
             <div class="a">
-                <input type="password" placeholder="Password" class="inpt" />
+                <input type="password" placeholder="Password" class="inptt" />
             </div>
             <div class="s">
-                <button class="tn">Log in</button>
+                <button class="button">Log in</button>
             </div>
             <div class="al">
                 <div class="k"></div>
